@startuml
skinparam classAttributeIconSize 0




class AddCourierController {
  +setNewCourierData (name, email, NIF, socialSecurityNumber, maxWeightCapacity)
}

class AddCourierUI {
}

class CourierHandler{
    +addCourier(cour)
}

class DataBase{
    +addCourier (name, email, NIF, socialSecurityNumber, maxWeightCapacity)
}

class Courier {
  -String name
  -String email
  -String NIF
  -double socialSecurityNumber
  -double maxWeightCapacity
  
  +create(name, email, NIF,socialSecurityNumber, maxWeightCapacity)
  +saveCourier(cour)
}

class Administrator{
  -String email
  -String password 
}

class Pharmacy {
  -String id
  -String name
  -int quantityScooters
  }


AddCourierUI ..> AddCourierController
AddCourierController ..> Courier
Courier ..> CourierHandler
CourierHandler ..> DataBase

Pharmacy "1" -- "1.." Courier: Has >
Administrator "1" -- "1.." Pharmacy: Manages >



@enduml